--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
+    "html-webpack-plugin": "^2.24.1",
+    "node-sass": "^3.11.3",
+    "sass-loader": "^4.0.2",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   }
