--- a/package.json
+++ b/package.json
@@ -16,9 +16,16 @@
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "html-webpack-plugin": "^2.24.1",
+    "jsx-loader": "^0.13.2",
     "node-sass": "^3.11.3",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "sass-loader": "^4.0.2",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
+  },
+  "dependencies": {
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
   }
 }
